--- a/style.css
+++ b/style.css
@@ -1,44 +1,49 @@
 body {
-    background: rgb(125, 198, 205);
-    color: rgb(45, 45, 45);
+    background: rgb(240, 243, 243);
+    color: rgba(10, 81, 246, 0.968);
     padding: 10px;
-    font-family: arial;
 }
-#all-contents {
+#all-contents { Rust;
   max-width: 800px;
     margin: auto;
 }
 
 /* navigation menu */
 nav {
-    background: rgb(239, 80, 41);
-   margin: 0 auto;
+    background: rgba(61, 61, 149, 0.942);
+   margin: 30 auto;
+   margin-bottom: 20px;
     display: flex;
     padding: 10px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-style:dotted;
+    border-color: rgb(252, 253, 253);
 }
 h1 {
     display: flex;
-    align-items: center;
-    color: white;
+    align-items:center;
+    color: hwb(0 100% 0%);
     flex: 1;
     margin: 0;
 }
 #nav-ul {
-    list-style-image: none;
+    list-style-image: none ;
 }
 .nav-li {
-    display: inline-block;
+    display: inline-box;
     padding: 0 10px;
 }
 a {
     text-decoration: none;
-    color: #fff;
+    color: #fffeff;
 }
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
-    display: flex;
+    background: hwb(0 100% 0% / 0.785);
+    display:flex;
+    border-style:dotted;
+    background-color: #fffeff;
 }
 .sidebar {
     margin-right: 25px;
@@ -54,8 +59,9 @@ main {
 
 /* portfolio styles */
 #interests {
-    border: 4px silver ridge;
+    border: 15px rgb(32, 74, 226) ridge;
     padding: 8px;
+    font-family: skranji;
 }
 h2, h3 {
     margin: 0px;
