<message about commit>

--- a/projects/platformer/platformer.css
+++ b/projects/platformer/platformer.css
@@ -4,8 +4,7 @@ body {
 
 canvas {
   background-color: lightgray;
-}
-
+  background-image:url("https://serializd-tmdb-images.b-cdn.net/t/p/w500/rg8N7x27Ef6PvlIiioLStf9ZaIO.jpg");
 img {
   display: none;
 }
